--- a/app/src/main/res/layout/activity_account_order.xml
+++ b/app/src/main/res/layout/activity_account_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".Account.RegisterActivity">
 
 
     <FrameLayout
@@ -82,7 +82,7 @@
                             android:layout_marginTop="45dp"
                             android:fontFamily="@font/bebas_neue"
                             android:gravity="center"
-                            android:text="MERHABA PAAATRON"
+                            android:text="GÜNAYDIN PAAATRON HAHAHA"
                             android:textColor="#000000"
                             android:textSize="34sp" />
 
@@ -100,6 +100,7 @@
 
                         <Button
                             android:id="@+id/buttonAccountDetails"
+                            android:onClick="buttonAccountDetails"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:backgroundTint="#FDFDFD"
@@ -111,17 +112,19 @@
                             android:textStyle="bold" />
                         <Button
                             android:id="@+id/buttonOrders"
+                            android:onClick="buttonOrders"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
-                            android:backgroundTint="#FDFDFD"
+                            android:backgroundTint="#000000"
                             android:fontFamily="sans-serif-condensed-medium"
                             android:text="Siparişler"
                             android:textAllCaps="false"
-                            android:textColor="#000000"
+                            android:textColor="#FCFCFC"
                             android:textSize="18sp"
                             android:textStyle="bold"/>
                         <Button
                             android:id="@+id/buttonAdresses"
+                            android:onClick="buttonAdresses"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:backgroundTint="#FDFDFD"
@@ -133,11 +136,11 @@
                             android:textStyle="bold"/>
                         <Button
                             android:id="@+id/buttonSignout"
+                            android:onClick="buttonSignout"
                             android:layout_width="match_parent"
                             android:layout_height="65dp"
                             android:backgroundTint="#FDFDFD"
                             android:fontFamily="sans-serif-condensed-medium"
-                            android:onClick="logout"
                             android:text="Çıkış yap"
                             android:textAllCaps="false"
                             android:textColor="#000000"
@@ -497,14 +500,22 @@
 
             <View
                 android:id="@+id/view2"
-                android:layout_width="144dp"
+                android:layout_width="120dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="#FDFDFD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <ImageView
+                android:id="@+id/imageViewFav"
+                android:layout_width="29dp"
+                android:layout_height="match_parent"
+                android:background="#FDFDFD"
+                android:backgroundTint="#FEFEFE"
+                app:srcCompat="@drawable/favori" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="45dp"
