--- a/app/src/main/res/layout/dress.xml
+++ b/app/src/main/res/layout/dress.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="410dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="408dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#FEFEFE"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,26 +16,26 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="295dp"
+            android:layout_width="210dp"
+            android:layout_height="210dp"
             app:srcCompat="@drawable/dress1" />
 
         <TextView
             android:id="@+id/dressNameTextView"
-            android:layout_width="280dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="33dp"
             android:fontFamily="sans-serif-condensed-light"
             android:text="Aris Kolej Ceket - SİYAH"
             android:textColor="#000000"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/priceTextView"
-            android:layout_width="280dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="33dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="sans-serif-condensed-light"
             android:text="1,999.99"
             android:textColor="#000000"
