--- a/app/src/main/res/layout/menu_drawerlayout.xml
+++ b/app/src/main/res/layout/menu_drawerlayout.xml
@@ -2,17 +2,17 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawerLayout"
+    android:id="@+id/menuDrawerLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/tasarim_navigationview"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="406dp"
+            android:layout_height="731dp"
             android:layout_gravity="start"
-            app:menu="@menu/menu" />
+            app:headerLayout="@layout/menu_layout"/>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
