--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amiko_semibold</item>
         <item>@font/anton</item>
+        <item>@font/basic</item>
         <item>@font/bebas_neue</item>
     </array>
 </resources>
